--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,15 +1,16 @@
-@use "../../node_modules/@picocss/pico/scss/pico" with (
-  $theme-color: "amber"
+@use "@picocss/pico/scss/pico" with (
+  $theme-color: "amber",
 );
 
 :root {
-  --background: #ffffff;
+  --background: #f2f2f2;
   --foreground: #171717;
+  --border: #e0e0e0;
 }
 
 [data-theme='dark'] {
   --background: #171717;
-  --foreground: #ffffff;
+  --foreground: #f2f2f2;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -26,8 +27,6 @@ body {
 }
 
 body {
-  //color: var(--foreground);
-  //background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
